# computer_vision

./: .gitignore  CMakeLists.txt  image_processing.sln
app/: CMakeLists.txt  main.cpp
cmake/: StandardProjectSettings.cmake
image_processing/: image_processing.vcxproj  image_processing.vcxproj.filters
image_processing/src/: image_processing.cpp  image_processing.h  main.cpp  main.h
image_processing/src/image_functions/: image_functions.cpp  image_functions.h
include/: CMakeLists.txt  Image.h  image_functions.h  main.h
include/cmake_variables/: cmake_variables.h  cmake_variables.h.in
src/: CMakeLists.txt  Image.cpp  Image.h  TrackedObject.cpp  TrackedObject.h  image_functions.cpp  image_functions.h  main.cpp  orb_functions.cpp  orb_functions.h  tesseract.cpp  tesseract.h  trackbars.cpp  trackbars.h
src/include/: Image.cpp  Image.h  image_functions.cpp
